--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        msys: [MSYS, MINGW32, MINGW64]
+        msys: [MINGW32, MINGW64]
     steps:
       - uses: actions/checkout@v3
         with:
