--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -20,4 +20,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: binaries - ${{ matrix.os }}
-        path: "sn-link"
+        path: sn-link sn-nm
